--- a/proway-computers/src/app/header/header.component.html
+++ b/proway-computers/src/app/header/header.component.html
@@ -1,16 +1,22 @@
-<header>
-  <h1>
-    <span>App</span><span>Compras</span>
-    <nav>
-      <ul>
-        <li><a>Produtos</a></li>
-        <li><a>Carrinho<i class="fa-solid fa-cart-shopping"></i></a></li>
-        <li><a>Contato</a></li>
-        <li><a><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a><i class="fa-brands fa-instagram"></i></a></li>
-        <li><a><i class="fa-brands fa-twitter"></i></a></li>
-        <li><a><i class="fa-brands fa-linkedin"></i></a></li>
-      </ul>
-    </nav>
+<header class="main-header">
+  <h1 class="main-header__title">
+    <span class= "main-header__title--blue">App</span><span class="main-header__title--orange">Compras</span>
   </h1>
+  <div class="container-menu">
+      <nav class="main-header__menu">
+        <ul>
+          <li><a>Produtos</a></li>
+          <li><a><i class="fa-solid fa-cart-shopping"></i>Carrinho<span class="badge-carrinho">0</span></a></li>
+          <li><a>Contato</a></li>
+          <li><a><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a><i class="fa-brands fa-linkedin"></i></a></li>
+        </ul>
+      </nav>
+      <form class="search-form">
+        <input type="text" class="search-form input">
+        <button><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
+      </form>
+  </div>
 </header>
