inserindo imagens e preços nos produtos

--- a/proway-computers/src/app/footer/footer.component.html
+++ b/proway-computers/src/app/footer/footer.component.html
@@ -4,9 +4,7 @@
       <section>
         <h2 class="footer__title">Sobre</h2>
           <p class="footer__about-text">
-            Empresa fundada em 2023 com proposito de transformar a vida dos leitores e programadores
-            brasileiros, trazendo diversidade na leitura de livros e best sellers de programação, ajudando
-            na escolha do titulo a ser lido para melhoria da educação dos nossos devs.
+            Loja online de CDS
           </p>
       </section>
       <address><h2 class="footer__title">Contato</h2>
