criando contador do carrinho de compras e adicionar itens

--- a/proway-computers/src/app/produtos/produtos.component.html
+++ b/proway-computers/src/app/produtos/produtos.component.html
@@ -7,7 +7,7 @@
 
 
             <p class="product-item__price">
-               {{ produto.preco | currency: "R$" }}
+               {{ produto.preco | currency: "BRL" }}
             </p>
 
             <p class="product-item__price-description">
