--- a/proway-computers/src/app/header/header.component.html
+++ b/proway-computers/src/app/header/header.component.html
@@ -6,7 +6,7 @@
       <nav class="main-header__menu">
         <ul>
           <li><a>Produtos</a></li>
-          <li><a><i class="fa-solid fa-cart-shopping"></i>Carrinho <span class="badge-carrinho">0</span></a></li>
+          <li><a><i class="fa-solid fa-cart-shopping"></i>Carrinho <span class="badge-carrinho"> {{ carrinhoService.obtemCarrinho().length }} </span></a></li>
           <li><a>Contato</a></li>
           <li><a><i class="fa-brands fa-facebook"></i></a></li>
           <li><a><i class="fa-brands fa-instagram"></i></a></li>
