--- a/proway-computers/src/app/produtos/detalhes-produto/detalhes-produto.component.html
+++ b/proway-computers/src/app/produtos/detalhes-produto/detalhes-produto.component.html
@@ -2,20 +2,20 @@
 
     <div class="product-image__container">
 
-      <img src="/assets/images/a7x.jpg" alt="compre o cd do a7x">
+      <img [src]="produto?.imagem" alt="compre o produto">
     </div>
     <div class="product-description__container">
-      <h2 class="product__name">Cd Novo Avenged Sevenfold</h2>
-      <h3 class="product__price"> R$ 350.00 </h3>
+      <h2 class="product__name"> {{ produto?.descricao }} </h2>
+      <h3 class="product__price"> {{ produto?.preco | currency: "BRL" }} </h3>
       <p> Estoque disponivel: </p>
       <label>
         Quantidade:
-        <input type="number">
+        <input type="number" [(ngModel)]="quantidade" min="1">
         Unidade (s)
       </label>
       <p class="class product__avaiability">
-        10 unidade (s) em estoque
+        {{ produto?.quantidadeEstoque }} unidade (s) em estoque
       </p>
-      <button>Adicionar ao carrinho </button>
+      <button (click)="adicionarAoCarrinho()">Adicionar ao carrinho </button>
     </div>
 </section>
