atualizando carrinho de compras e preços

--- a/proway-computers/src/app/produtos/detalhes-produto/detalhes-produto.component.html
+++ b/proway-computers/src/app/produtos/detalhes-produto/detalhes-produto.component.html
@@ -2,7 +2,7 @@
 
     <div class="product-image__container">
 
-      <img [src]="produto?.imagem" alt="compre o produto">
+      <img [src]="produto?.imagem" alt="">
     </div>
     <div class="product-description__container">
       <h2 class="product__name"> {{ produto?.descricao }} </h2>
