--- a/proway-computers/src/app/header/header.component.html
+++ b/proway-computers/src/app/header/header.component.html
@@ -14,9 +14,6 @@
           <li><a><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
       </nav>
-      <form class="search-form">
-        <input type="text" class="search-form input">
-        <button><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
-      </form>
+      <app-barra-pesquisa></app-barra-pesquisa>
   </div>
 </header>
