trabalhando com rotas pt-2

--- a/proway-computers/src/app/contato/contato.component.html
+++ b/proway-computers/src/app/contato/contato.component.html
@@ -21,7 +21,7 @@
 
       </div>
 
-      <input type="text" placeholder="Digite o asssunto..."  formControlName="asssunto"
+      <input type="text" placeholder="Digite o assunto..."  formControlName="assunto"
         [class.valid]="formContato.controls['assunto'].valid"
         [class.invalid]="formContato.controls['assunto'].invalid && (formContato.controls['assunto'].touched || formContato.controls['assunto'].dirty)"
       />
