--- a/proway-computers/src/app/header/header.component.html
+++ b/proway-computers/src/app/header/header.component.html
@@ -5,9 +5,9 @@
   <div class="container-menu">
       <nav class="main-header__menu">
         <ul>
-          <li><a>Produtos</a></li>
-          <li><a><i class="fa-solid fa-cart-shopping"></i>Carrinho <span class="badge-carrinho"> {{ carrinhoService.obtemCarrinho().length }} </span></a></li>
-          <li><a>Contato</a></li>
+          <li><a routerLink="/">Produtos</a></li>
+          <li><a routerLink="/carrinho"><i class="fa-solid fa-cart-shopping"></i>Carrinho <span class="badge-carrinho"> {{ carrinhoService.obtemCarrinho().length }} </span></a></li>
+          <li><a routerLink="/contato">Contato</a></li>
           <li><a><i class="fa-brands fa-facebook"></i></a></li>
           <li><a><i class="fa-brands fa-instagram"></i></a></li>
           <li><a><i class="fa-brands fa-twitter"></i></a></li>
