--- a/proway-computers/src/app/produtos/detalhes-produto/detalhes-produto.component.html
+++ b/proway-computers/src/app/produtos/detalhes-produto/detalhes-produto.component.html
@@ -1,8 +1,7 @@
 <section class="product__container">
 
-    <div class="product-image__container">
-
-      <img [src]="produto?.imagem" alt="">
+    <div class="product-image__container" >
+      <img [src]="produto?.imagem" />
     </div>
     <div class="product-description__container">
       <h2 class="product__name"> {{ produto?.descricao }} </h2>
@@ -14,7 +13,7 @@
         Unidade (s)
       </label>
       <p class="class product__avaiability">
-        {{ produto?.quantidadeEstoque }} unidade (s) em estoque
+        {{ produto?.quantidadeEstoque }} unidade(s) em estoque
       </p>
       <button (click)="adicionarAoCarrinho()">Adicionar ao carrinho </button>
     </div>
